# ccaf_kickstarter-flight_consolidator_app-lambda

./: .gitignore  .terraform.lock.hcl  CHANGELOG.md  Dockerfile  README.md  aws-lambda-setup.tf  handler.py  main.tf  provider.tf  pyproject.toml  requirements.txt  template.yaml  variables.tf
.blog/: best-practices-action-blog-series-ccaf-app-deployment.md  terraform-configuration.md  testing-aws-lambda-locally-with-aws-sam.md
.github/workflows/: deploy.yml  undeploy.yml
events/: test_events.json
scripts/: build-publish-lambda.sh  launch-from-locally.sh  run-local.sh  run-locally.sh  run-terraform-locally.sh
